--- a/style.css
+++ b/style.css
@@ -34,15 +34,15 @@ body {
 }
 
 .cupcake1 {
-    background-color: #ff006e;
+    background-color: #721121;
 }
 
 .cupcake2 {
-    background-color: #fb5607;
+    background-color: #A5402D;
 }
 
 .cupcake3 {
-    background-color: #8338ec;
+    background-color: #F15156;
 }
 
 .blue {
